# tridge_pypi

./: README.md  pyproject.toml
src/tridge/: results.csv  schedule.csv  screenlog.0  sim.py  sim.sh  sim_script.py  tridge.py
src/tridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tridge_aahilgert/: tridge.py
src/tridge_aahilgert.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .tridge_tests.py.swp
