[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project] 
name = "tridge"
version = "0.0.1"
authors = [
    { name="Arthur Ayestas Hilgert", email="aahilgert@gmail.com"},
]
description = "tuning-free parameter ridge regression library with GPU utilization"
license = { file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aahilgert/tridge_pypi"
"Bug Tracker" = "https://github.com/aahilgert/tridge_pypi/issues"
